@@ -1,7 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.5'
-    id 'org.beryx.jlink' version '2.1.6-gradle4'
+    id 'org.beryx.jlink' version '2.3.1'
 }
 
 repositories {
@@ -53,3 +53,45 @@ jlink {
 }
 
 mainClassName = "$moduleName/io.makerplayground.ui.Main"
+
+task createBundle(type: Exec) {
+    description 'Build the installable bundle'
+    dependsOn 'jlink'
+    commandLine = [
+            '/Users/nuntipat/Downloads/jdk/jpackager',
+            'create-image',
+            '--name',
+            'Maker Playground',
+            '--version',
+            '0.4.0-beta3',
+            '--file-associations',
+            'package/resources/file-associations.properties',
+            '--output',
+            "${buildDir}/native-image",
+            '--runtime-image',
+            "${buildDir}/image",
+            '--module',
+            "${moduleName}",
+            '--jvm-args',
+            '--add-modules javafx.controls',
+            '--jvm-args',
+            '--add-modules javafx.fxml',
+            '--jvm-args',
+            '--add-reads MakerPlayground.merged.module=javafx.base,javafx.graphics,javafx.controls',
+            '--jvm-args',
+            '--add-exports javafx.base/com.sun.javafx.runtime=MakerPlayground.merged.module',
+            '--jvm-args',
+            '--add-exports javafx.base/com.sun.javafx.collections=MakerPlayground.merged.module',
+            '--jvm-args',
+            '--add-exports javafx.controls/com.sun.javafx.scene.control=MakerPlayground.merged.module',
+            '--jvm-args',
+            '--add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=MakerPlayground.merged.module',
+            '--jvm-args',
+            '--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=MakerPlayground.merged.module',
+            '--jvm-args',
+            '--add-exports javafx.graphics/com.sun.javafx.scene.traversal=MakerPlayground.merged.module',
+            '--jvm-args',
+            "-m ${moduleName}/io.makerplayground.ui.Main",
+            '--verbose'
+    ]
+}
